kube/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: propensity-to-sell-nginx
  name: propensity-to-sell-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: propensity-to-sell-nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: propensity-to-sell-nginx
    spec:
      containers:
        - image: propentity-to-sell-proxy:latest
          imagePullPolicy: Never
          name: propentity-to-sell-proxy
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
