kube/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: propensity-to-sell-nginx
spec:
  type: LoadBalancer
  ports:
    - name: "1337"
      port: 1337
      targetPort: 80
  selector:
    app: propensity-to-sell-nginx
