kube/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: propensity-to-sell-model
spec:
  type: LoadBalancer
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: propensity-to-sell-model
